--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -64,12 +64,15 @@
             <a class="nav-link" href="/theaters/all">극장</a>
           </li>
           <li class="nav-item">
-            <div sec:authorize="isAnonymous()">
-              <a class="nav-link" href="/login">로그인</a>
-              <a class="nav-link" href="/signup">회원가입</a>
+            <div sec:authorize="isAnonymous()" class="row">
+              <a class="nav-link col" href="/login">로그인</a>
+              <a class="nav-link col" href="/signup">회원가입</a>
             </div>
-            <div sec:authorize="isAuthenticated()">
-              <a class="nav-link" href="/logout">로그아웃</a>
+            <div sec:authorize="isAuthenticated()" class="row">
+              <a class="nav-link col" href="/logout">로그아웃</a>
+              <div sec:authorize="hasRole('ADMIN')" class="col">
+                <a class="nav-link" href="/admin">관리자 메뉴</a>
+              </div>
             </div>
           </li>
         </ul>
