--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -70,6 +70,7 @@
             </div>
             <div sec:authorize="isAuthenticated()" class="row">
               <a class="nav-link col" href="/logout">로그아웃</a>
+              <a class="nav-link col" href="/memberInfo">마이페이지</a>
               <div sec:authorize="hasRole('ADMIN')" class="col">
                 <a class="nav-link" href="/admin">관리자 메뉴</a>
               </div>
