movie public search complete

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -4,12 +4,15 @@
 <th:block th:replace="~{/layout/basic :: setContent(~{this :: content})}">
     <th:block th:fragment="content">
 
-    <hr class="my-4">
-    <h1>어서오세요 관리자님!!</h1>
-        <div>
-            <a href="/movies/create">영화 추가</a>
-            <a href="/theaters/create">영화관 추가(미완)</a>
-            <a href="/theaters/all">영화 상영시간 추가</a>
+        <hr class="my-4">
+        <div class="container">
+            <h1>어서오세요 관리자님!!</h1>
+            <div>
+                <a href="/movies/create" class="row">영화 추가</a>
+                <a href="/movies/public/search" class="row">영화 추가 (네이버 검색)</a>
+                <a href="/theaters/create" class="row">영화관 추가(미완)</a>
+                <a href="/theaters/all" class="row">영화 상영시간 추가</a>
+            </div>
         </div>
 
     </th:block>
