--- a/src/main/resources/templates/movies/movie_api_create.html
+++ b/src/main/resources/templates/movies/movie_api_create.html
@@ -7,8 +7,8 @@
     <div>
         <h1>영화 추가 API (영화 이름만)</h1>
         <form id="movie-form">
-            <label for="movieName">이름 : </label>
-            <input id="movieName" type="text" placeholder="영화제목">
+            <label for="title">이름 : </label>
+            <input id="title" type="text" placeholder="영화제목">
             <button id="btn-create" type="submit">SAVE</button>
         </form>
     </div>
