--- a/src/main/resources/templates/reservations/reservation_seat.html
+++ b/src/main/resources/templates/reservations/reservation_seat.html
@@ -59,7 +59,7 @@
                 <span class='plus'>+</span>
             </div>
 
-            <h1 class="mt-4">[[${movieName}]]</h1>
+            <h1 class="mt-4">[[${title}]]</h1>
             <div class="form-group">
                 <label >지역</label>
                 <input class="form-control" th:value="|${info.area} ${info.specific}|" readonly>
