--- a/src/main/resources/templates/cinemas/cinema_list.html
+++ b/src/main/resources/templates/cinemas/cinema_list.html
@@ -35,7 +35,7 @@
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Display</th>
-                    <th scope="col">MovieName</th>
+                    <th scope="col">Title</th>
                     <th scope="col">Seats</th>
                     <th scope="col">Date</th>
                 </tr>
@@ -48,7 +48,7 @@
                         </a>
                     </th>
                     <td>[[${cinema.display}]]</td>
-                    <td>[[${cinema.movieName}]]</td>
+                    <td>[[${cinema.title}]]</td>
                     <td>[[${cinema.seats}]]</td>
                     <td>[[${cinema.date}]]</td>
                     <td>
