--- a/src/main/resources/templates/movies/movie_create.html
+++ b/src/main/resources/templates/movies/movie_create.html
@@ -7,8 +7,8 @@
 
     <form th:action="@{/movies/create}" th:object="${movieRequestDTO}" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="movieName" >영화 제목 : </label>
-            <input id="movieName" type="text" class="form-control" th:field="*{movieName}" size="50" placeholder="제목 입력란" /><br/>
+            <label for="title" >영화 제목 : </label>
+            <input id="title" type="text" class="form-control" th:field="*{title}" size="50" placeholder="제목 입력란" /><br/>
         </div>
         <div>
             <div th:each="ageLimit : ${T(ChanuE.MovieTheater.domain.AgeLimit).values()}" class="form-check form-check-inline">
