--- a/src/main/resources/templates/movies/movie_search.html
+++ b/src/main/resources/templates/movies/movie_search.html
@@ -18,6 +18,7 @@
                     <th>Title</th>
                     <th>Director</th>
                     <th>Rating</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -26,10 +27,40 @@
                     <td th:text="${movie.title}"></td>
                     <td th:text="${movie.director}"></td>
                     <td th:text="${movie.userRating}"></td>
+                    <td>
+                        <button type="button" class="btn btn-danger" th:attr="data-title=${movie.title}, data-director=${movie.director},
+                                    data-image=${movie.image}">추가</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
         </div>
+
+        <script th:inline="javascript">
+
+            $(document).ready(function() {
+                $(".btn-danger").on("click", function() {
+                    var title = $(this).data("title");
+                    var director = $(this).data("director");
+                    var image = $(this).data("image");
+
+                    console.log(title);
+                    console.log(director);
+                    console.log(image);
+
+                    var sendData = {
+                        "title": title,
+                        "director": director,
+                        "image": image
+                    }
+
+                    $.ajax({
+                        url: "/"
+                    });
+                });
+            });
+
+        </script>
 
     </th:block>
 </th:block>
