--- a/src/main/resources/templates/movies/movie_read_auth.html
+++ b/src/main/resources/templates/movies/movie_read_auth.html
@@ -31,12 +31,12 @@
         <button type="button" class="btn btn-primary">
             Review Count <span class="badge badge-light">[[${result.reviewCnt}]]</span>
         </button>
-<!--        <div sec:authorize="isAuthenticated()">-->
-<!--            <button type="button" class="btn btn-light addReview">리뷰 작성</button>-->
-<!--        </div>-->
-        <div sec:authorize="isAnonymous()">
-            <a href="/login" class="btn btn-light addReview">댓글을 작성하려면 로그인해주세요!</a>
+        <div sec:authorize="isAuthenticated()">
+            <button type="button" class="btn btn-light addReview">리뷰 작성</button>
         </div>
+<!--        <div sec:authorize="isAnonymous()">-->
+<!--            <a href="/login" class="btn btn-light addReview">댓글을 작성하려면 로그인해주세요!</a>-->
+<!--        </div>-->
 
         <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
@@ -56,11 +56,11 @@
                             <Label >평점 <span class="grade"></span></Label>
                             <div class="starrr"></div>
                         </div>
-<!--                        <div class="form-group">-->
-<!--                            <Label >작성자</Label>-->
-<!--                            <input class="form-control" type="text" name="writer" th:value="${member.name}" th:placeholder="${member.name}" readonly>-->
-<!--                            <input type="hidden" name="id">-->
-<!--                        </div>-->
+                        <div class="form-group">
+                            <Label >작성자</Label>
+                            <input class="form-control" type="text" name="writer" th:value="${member.name}" th:placeholder="${member.name}" readonly>
+                            <input type="hidden" name="id">
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger reviewRemove">Remove</button>
@@ -178,7 +178,7 @@
                 // 리뷰 모달창에서 저장 버튼 누를때!
                 $(".reviewSave").on("click", function() {
 
-
+                    var writer = [[${member.name}]];
 
                     var data = {
                         movieId: movieId,
