--- a/src/main/resources/templates/movies/movie_read_auth.html
+++ b/src/main/resources/templates/movies/movie_read_auth.html
@@ -20,6 +20,10 @@
             <input class="form-control" th:value="${result.director}" name="director" readonly>
         </div>
         <div class="form-group">
+            <label >Description</label>
+            <textarea class="form-control" th:text="${result.description}" name="description" readonly></textarea>
+        </div>
+        <div class="form-group">
             <label >Running Time</label>
             <input class="form-control" th:value="${result.runningTime}" name="runningTime" readonly>
         </div>
